--- a/data/po/en.po
+++ b/data/po/en.po
@@ -1482,9 +1482,9 @@ msgstr "Max speed - the higher it is, the faster the kart can go. Especially use
 #. I18N: ./data/gui/screens/help6.stkgui
 #. I18N: In the help menu
 msgid ""
-"Nitro consumption - the lower it is, the more speed you can get from a can "
-"of nitro. The lighter the kart, the lower its nitro consumption."
-msgstr "Nitro consumption - the lower it is, the more speed you can get from a can of nitro. The lighter the kart, the lower its nitro consumption."
+"Nitro efficiency - The higher it is, the more speed you get from a "
+"can of nitro. A lighter kart will have higher nitro efficiency."
+msgstr "Nitro efficiency - The higher it is, the more speed you get from a can of nitro. A lighter kart will have higher nitro efficiency."
 
 #. I18N: ./data/gui/screens/help6.stkgui
 #. I18N: In the help menu
