--- a/data/po/br.po
+++ b/data/po/br.po
@@ -1488,8 +1488,8 @@ msgstr "Tizh maks - seul uheloc'h e vez, seul fonnusoc'h ez a ar c'hart. Talvoud
 #. I18N: ./data/gui/screens/help6.stkgui
 #. I18N: In the help menu
 msgid ""
-"Nitro consumption - the lower it is, the more speed you can get from a can "
-"of nitro. The lighter the kart, the lower its nitro consumption."
+"Nitro efficiency - The higher it is, the more speed you get from a "
+"can of nitro. A lighter kart will have higher nitro efficiency."
 msgstr "Bevezadur nitro: seul skañvoc'h e vez, seul fonnusoc'h e c'hallit mont diwar ar c'hanedig nitro. Seul skañvoc'h e vez ar c'hart, seul skañvoc'h ha se e vo e vevezadur nitro."
 
 #. I18N: ./data/gui/screens/help6.stkgui
