--- a/data/po/ca.po
+++ b/data/po/ca.po
@@ -1485,8 +1485,8 @@ msgstr "Velocitat màxima: com més alta sigui, més ràpid pot anar el kart. Es
 #. I18N: ./data/gui/screens/help6.stkgui
 #. I18N: In the help menu
 msgid ""
-"Nitro consumption - the lower it is, the more speed you can get from a can "
-"of nitro. The lighter the kart, the lower its nitro consumption."
+"Nitro efficiency - The higher it is, the more speed you get from a "
+"can of nitro. A lighter kart will have higher nitro efficiency."
 msgstr "Consum de nitro: com més baix sigui, més velocitat podràs obtenir d'una ampolla de nitro. Com més lleuger sigui el kart, menor serà el seu consum de nitro."
 
 #. I18N: ./data/gui/screens/help6.stkgui
