--- a/data/po/eu.po
+++ b/data/po/eu.po
@@ -1491,8 +1491,8 @@ msgstr ""
 #. I18N: ./data/gui/screens/help6.stkgui
 #. I18N: In the help menu
 msgid ""
-"Nitro consumption - the lower it is, the more speed you can get from a can "
-"of nitro. The lighter the kart, the lower its nitro consumption."
+"Nitro efficiency - The higher it is, the more speed you get from a "
+"can of nitro. A lighter kart will have higher nitro efficiency."
 msgstr ""
 
 #. I18N: ./data/gui/screens/help6.stkgui
