--- a/data/po/he.po
+++ b/data/po/he.po
@@ -1492,8 +1492,8 @@ msgstr ""
 #. I18N: ./data/gui/screens/help6.stkgui
 #. I18N: In the help menu
 msgid ""
-"Nitro consumption - the lower it is, the more speed you can get from a can "
-"of nitro. The lighter the kart, the lower its nitro consumption."
+"Nitro efficiency - The higher it is, the more speed you get from a "
+"can of nitro. A lighter kart will have higher nitro efficiency."
 msgstr "צריכת ניטרו- ככל שהיא נמוכה יותר, כך תשיג יותר מהירות מהניטרו. ככל שמכונית הקארטינג קלה יותר, כך צריכת הניטרו תהיה נמוכה יותר."
 
 #. I18N: ./data/gui/screens/help6.stkgui
