--- a/data/po/hu.po
+++ b/data/po/hu.po
@@ -1490,8 +1490,8 @@ msgstr "Végsebesség – minél magasabb, annál gyorsabban tud menni a gokart.
 #. I18N: ./data/gui/screens/help6.stkgui
 #. I18N: In the help menu
 msgid ""
-"Nitro consumption - the lower it is, the more speed you can get from a can "
-"of nitro. The lighter the kart, the lower its nitro consumption."
+"Nitro efficiency - The higher it is, the more speed you get from a "
+"can of nitro. A lighter kart will have higher nitro efficiency."
 msgstr "Nitrófogyasztás – minél alacsonyabb, annál több sebességet kaphatsz egy kanna nitrótól. Minél könnyebb a gokart, annál alacsonyabb a nitrófogyasztása."
 
 #. I18N: ./data/gui/screens/help6.stkgui
