--- a/data/po/nl.po
+++ b/data/po/nl.po
@@ -1489,8 +1489,8 @@ msgstr "Maximale snelheid: hoe hoger, hoe harder de kart kan gaan. Vooral handig
 #. I18N: ./data/gui/screens/help6.stkgui
 #. I18N: In the help menu
 msgid ""
-"Nitro consumption - the lower it is, the more speed you can get from a can "
-"of nitro. The lighter the kart, the lower its nitro consumption."
+"Nitro efficiency - The higher it is, the more speed you get from a "
+"can of nitro. A lighter kart will have higher nitro efficiency."
 msgstr "Turboverbruik: hoe lager, hoe meer snelheid je kunt halen uit een turboblik. En hoe lichter de kart, hoe lager het verbruik."
 
 #. I18N: ./data/gui/screens/help6.stkgui
