--- a/data/po/nn.po
+++ b/data/po/nn.po
@@ -1483,8 +1483,8 @@ msgstr "Toppfart: Høg toppfart gjer at du kan køyra raskare. Er spesielt nytti
 #. I18N: ./data/gui/screens/help6.stkgui
 #. I18N: In the help menu
 msgid ""
-"Nitro consumption - the lower it is, the more speed you can get from a can "
-"of nitro. The lighter the kart, the lower its nitro consumption."
+"Nitro efficiency - The higher it is, the more speed you get from a "
+"can of nitro. A lighter kart will have higher nitro efficiency."
 msgstr "Nitroforbruk: Jo lågare nitroforbruk, jo meir fart får du frå ei flaske nitro. Lettare køyretøy har lågare nitroforbruk."
 
 #. I18N: ./data/gui/screens/help6.stkgui
