--- a/data/po/pl.po
+++ b/data/po/pl.po
@@ -1487,8 +1487,8 @@ msgstr "Maksymalna prędkość - im wyższa, tym szybciej może jechać Twój go
 #. I18N: ./data/gui/screens/help6.stkgui
 #. I18N: In the help menu
 msgid ""
-"Nitro consumption - the lower it is, the more speed you can get from a can "
-"of nitro. The lighter the kart, the lower its nitro consumption."
+"Nitro efficiency - The higher it is, the more speed you get from a "
+"can of nitro. A lighter kart will have higher nitro efficiency."
 msgstr "Zużycie nitro - im mniejsze, tym mniej zużyjesz nitro aby się rozpędzić. Lżejsze gokarty zużywają mniej nitro."
 
 #. I18N: ./data/gui/screens/help6.stkgui
