--- a/data/po/sk.po
+++ b/data/po/sk.po
@@ -1488,8 +1488,8 @@ msgstr "Maximálna rýchlosť - čím je vyššia, tým rýchlejšie sa dokáže
 #. I18N: ./data/gui/screens/help6.stkgui
 #. I18N: In the help menu
 msgid ""
-"Nitro consumption - the lower it is, the more speed you can get from a can "
-"of nitro. The lighter the kart, the lower its nitro consumption."
+"Nitro efficiency - The higher it is, the more speed you get from a "
+"can of nitro. A lighter kart will have higher nitro efficiency."
 msgstr ""
 
 #. I18N: ./data/gui/screens/help6.stkgui
