--- a/doc/supertuxkart.1
+++ b/doc/supertuxkart.1
@@ -8,8 +8,8 @@ supertuxkart [options] [<args>]
 .PP
 This program accepts some optional parameters.
 
-." TODO: Fix indentation for inner "sub-options" as
-." '--gp=NAME' under '-t'. // 2019
+.\" TODO: Fix indentation for inner "sub-options" as
+.\" '--gp=NAME' under '-t'. // 2019
 
 .PP
 .BR \-N ", " \-\-no\-start\-screen
@@ -188,17 +188,17 @@ Number of laps to use in a demo.
 Number of karts to use in a demo.
 .RE
 .PP
-." .BR \-\-history
-." Replay history file 'history.dat'.
-." .BR \-\-test\-ai=N
-." Use the test\-ai for every n\-th AI kart.
-." (so n=1 means all Ais will be the test ai)
-."
-." .BR \-\-disable\-item\-collection
-." Disable item collection. Useful for
-." debugging client/server item management.
-." .BR \-\-network\-item\-debugging
-." Print item handling debug information.
+.\" .BR \-\-history
+.\" Replay history file 'history.dat'.
+.\" .BR \-\-test\-ai=N
+.\" Use the test\-ai for every n\-th AI kart.
+.\" (so n=1 means all Ais will be the test ai)
+.\"
+.\" .BR \-\-disable\-item\-collection
+.\" Disable item collection. Useful for
+.\" debugging client/server item management.
+.\" .BR \-\-network\-item\-debugging
+.\" Print item handling debug information.
 .BR \-\-server\-config=file
 .RS 4
 Specify the server_config.xml for server hosting,
